tests/sources/invalid/functions/builtin_arg_count_errors.fire
// Calling a builtin with an argument count check (`typeof`) with the wrong
// number of arguments.
int32 main() {
    int32 x = typeof();  //~ ERROR FS-SEM-0010 @15
    return x;
}
